--- a/app/src/main/res/layout/activity_add_task.xml
+++ b/app/src/main/res/layout/activity_add_task.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp"
-    tools:context=".AddTaskActivity">
+    tools:context=".AddEditTaskActivity">
 
     <EditText
         android:id="@+id/edit_text_title"
