--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -2,9 +2,42 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+
+    <item
+        android:id="@+id/search_bar"
+        android:icon="@drawable/ic_search"
+        android:title="Szukaj"
+        app:actionViewClass="androidx.appcompat.widget.SearchView"
+        app:showAsAction="always|collapseActionView" />
+
+    <item
+        android:icon="@drawable/ic_sort"
+        android:title="Sort"
+        app:showAsAction="always">
+
+        <menu>
+
+            <item
+                android:id="@+id/sort_by_name"
+                android:title="Sortuj wg nazwy" />
+
+            <item
+                android:id="@+id/sort_by_date"
+                android:title="Sortuj wg daty" />
+
+        </menu>
+
+    </item>
+
     <item
         android:id="@+id/delete_all_tasks"
         android:title="Usuń wszystkie zadania"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/hide_completed_task"
+        android:checkable="true"
+        android:title="Ukryj ukończone"
+        app:showAsAction="never" />
+
 
 </menu>
