--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -11,9 +11,16 @@
         app:showAsAction="always|collapseActionView" />
 
     <item
+        android:id="@+id/share"
+        android:icon="@drawable/ic_share"
+        android:title="Share"
+        app:showAsAction="always" />
+
+    <item
         android:icon="@drawable/ic_sort"
         android:title="Sort"
         app:showAsAction="always">
+
 
         <menu>
 
@@ -28,6 +35,8 @@
         </menu>
 
     </item>
+
+
 
     <item
         android:id="@+id/delete_all_tasks"
