--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -32,6 +32,10 @@
                 android:id="@+id/sort_by_date"
                 android:title="Sortuj wg daty" />
 
+            <item
+                android:id="@+id/sort_by_priority"
+                android:title="Sortuj wg priorytetu"/>
+
         </menu>
 
     </item>
