--- a/app/src/main/res/layout/task_item.xml
+++ b/app/src/main/res/layout/task_item.xml
@@ -37,6 +37,13 @@
             android:layout_below="@id/text_view_title"
             android:text="Opis" />
 
+        <TextView
+            android:id="@+id/text_view_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/text_view_description"
+            android:text="Data" />
+
 
     </RelativeLayout>
 
