--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -46,10 +46,18 @@
         android:id="@+id/delete_all_tasks"
         android:title="Usuń wszystkie zadania"
         app:showAsAction="never" />
+
+    <item
+        android:id="@+id/delete_all_done_tasks"
+        android:title="Usuń ukończone zadania"
+        app:showAsAction="never" />
+
     <item
         android:id="@+id/hide_completed_task"
         android:checkable="true"
+        android:enabled="true"
         android:title="Ukryj ukończone"
+        android:visible="true"
         app:showAsAction="never" />
 
 
