--- a/app/src/main/res/layout/activity_add_task.xml
+++ b/app/src/main/res/layout/activity_add_task.xml
@@ -34,12 +34,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
-    <TextView
-        android:layout_width="wrap_content"
+
+    <CheckBox
+        android:id="@+id/check_box_done"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="Data:"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+        android:checked="true"
+        android:text="Wykonane" />
 
     <CheckBox
         android:id="@+id/check_box_date"
@@ -47,7 +48,7 @@
         android:layout_height="wrap_content"
         android:checked="true"
         android:onClick="onCheckboxClicked"
-        android:text="Dodawanie daty" />
+        android:text="Data:" />
 
     <DatePicker
         android:id="@+id/date_picker_date"
