--- a/app/src/main/res/layout/activity_add_task.xml
+++ b/app/src/main/res/layout/activity_add_task.xml
@@ -39,7 +39,7 @@
         android:id="@+id/check_box_done"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:checked="true"
+        android:checked="false"
         android:text="Wykonane" />
 
     <CheckBox
