--- a/app/src/main/res/layout/task_item.xml
+++ b/app/src/main/res/layout/task_item.xml
@@ -49,11 +49,11 @@
             android:id="@+id/check_box_done_task"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
             android:layout_below="@id/text_view_date"
+            android:layout_alignParentStart="true"
+            android:enabled="false"
             android:minWidth="0dp"
-            android:minHeight="0dp"
-            android:enabled="false"/>
+            android:minHeight="0dp" />
 
 
     </RelativeLayout>
